# advent-of-code-2025

./: .env.template  .gitignore  Cargo.toml  README.md  rustfmt.toml
puzzles/1/: README.md
puzzles/10/: README.md
puzzles/2/: README.md
puzzles/3/: README.md
puzzles/4/: README.md
puzzles/5/: README.md
puzzles/6/: README.md
puzzles/7/: README.md
puzzles/8/: README.md
puzzles/9/: README.md
src/: cli.rs  config.rs  day.rs  logging.rs  main.rs  scratch.rs
src/day_1/: solver.rs  tests.rs
src/day_10/: lights.rs  mod.rs  models.rs  solver.rs  tests.rs
src/day_2/: solver.rs  tests.rs
src/day_3/: solver.rs  tests.rs
src/day_4/: solver.rs  tests.rs
src/day_5/: solver.rs  tests.rs
src/day_6/: solver.rs  tests.rs
src/day_7/: solver.rs  tests.rs
src/day_8/: circuits.rs  coords_3d.rs  mod.rs  model.rs  solver.rs  tests.rs
src/day_9/: mod.rs  solver.rs  tests.rs
src/lib_common/: coords_2d.rs  mod.rs  traits.rs
src/models/: coord_vector.rs  coords_2d.rs  coords_3d.rs  mod.rs
